Remove files and updated

--- a/comparision model.ipynb
+++ b/comparision model.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -17,7 +17,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -30,13 +30,13 @@
             "Fusing layers... \n",
             "gelan-c-seg summary: 414 layers, 27378319 parameters, 0 gradients, 144.3 GFLOPs\n",
             "image 1/6 /home/llama/Enrique/maderas/yolov9/Wood-annotation-9/test/images/0030-1_jpg.rf.9d6568d8c612da31b2472577cea99103.jpg: 640x640 2 Anchura radio celulas 97s, 1 Depositos o gomas 58, 1 Parenquima axial paratraqueal 78, 8 Parenquima axial paratraqueal 80s, 3 Parenquima axial paratraqueal 81s, 6 Parenquima axial paratraqueal 83s, 13 Vaso V2s, 2 Vaso V3s, 12.0ms\n",
-            "image 2/6 /home/llama/Enrique/maderas/yolov9/Wood-annotation-9/test/images/0030-1_jpg.rf.ec7d31396dbb722c38bcdef111fad582.jpg: 640x640 2 Anchura radio celulas 97s, 1 Depositos o gomas 58, 1 Parenquima axial paratraqueal 78, 8 Parenquima axial paratraqueal 80s, 3 Parenquima axial paratraqueal 81s, 6 Parenquima axial paratraqueal 83s, 13 Vaso V2s, 2 Vaso V3s, 11.9ms\n",
-            "image 3/6 /home/llama/Enrique/maderas/yolov9/Wood-annotation-9/test/images/0030-6_jpg.rf.728e001481e01825292f263cef614194.jpg: 640x640 6 Anchura radio celulas 97s, 2 Depositos o gomas 58s, 10 Parenquima axial paratraqueal 80s, 5 Parenquima axial paratraqueal 81s, 2 Parenquima axial paratraqueal 82s, 4 Parenquima axial paratraqueal 83s, 17 Vaso V2s, 4 Vaso V3s, 12.1ms\n",
-            "image 4/6 /home/llama/Enrique/maderas/yolov9/Wood-annotation-9/test/images/0030-8_jpg.rf.327a00164ed7dce2d4998fe7964b6226.jpg: 640x640 5 Anchura radio celulas 97s, 3 Depositos o gomas 58s, 2 Parenquima axial paratraqueal 78s, 5 Parenquima axial paratraqueal 80s, 10 Parenquima axial paratraqueal 81s, 1 Parenquima axial paratraqueal 82, 1 Parenquima axial paratraqueal 83, 1 Thylos 56, 19 Vaso V2s, 5 Vaso V3s, 11.9ms\n",
-            "image 5/6 /home/llama/Enrique/maderas/yolov9/Wood-annotation-9/test/images/0294-12_jpg.rf.ee4a0d1c3a61b00b3be7dcef7f026a9a.jpg: 640x640 1 Anchura radio celulas 96, 2 Anchura radio celulas 97s, 3 Parenquima en bandas 89s, 1 Porosidad 3, 2 Thylos 56s, 5 Vaso V2s, 12.3ms\n",
+            "image 2/6 /home/llama/Enrique/maderas/yolov9/Wood-annotation-9/test/images/0030-1_jpg.rf.ec7d31396dbb722c38bcdef111fad582.jpg: 640x640 2 Anchura radio celulas 97s, 1 Depositos o gomas 58, 1 Parenquima axial paratraqueal 78, 8 Parenquima axial paratraqueal 80s, 3 Parenquima axial paratraqueal 81s, 6 Parenquima axial paratraqueal 83s, 13 Vaso V2s, 2 Vaso V3s, 12.0ms\n",
+            "image 3/6 /home/llama/Enrique/maderas/yolov9/Wood-annotation-9/test/images/0030-6_jpg.rf.728e001481e01825292f263cef614194.jpg: 640x640 6 Anchura radio celulas 97s, 2 Depositos o gomas 58s, 10 Parenquima axial paratraqueal 80s, 5 Parenquima axial paratraqueal 81s, 2 Parenquima axial paratraqueal 82s, 4 Parenquima axial paratraqueal 83s, 17 Vaso V2s, 4 Vaso V3s, 12.0ms\n",
+            "image 4/6 /home/llama/Enrique/maderas/yolov9/Wood-annotation-9/test/images/0030-8_jpg.rf.327a00164ed7dce2d4998fe7964b6226.jpg: 640x640 5 Anchura radio celulas 97s, 3 Depositos o gomas 58s, 2 Parenquima axial paratraqueal 78s, 5 Parenquima axial paratraqueal 80s, 10 Parenquima axial paratraqueal 81s, 1 Parenquima axial paratraqueal 82, 1 Parenquima axial paratraqueal 83, 1 Thylos 56, 19 Vaso V2s, 5 Vaso V3s, 12.3ms\n",
+            "image 5/6 /home/llama/Enrique/maderas/yolov9/Wood-annotation-9/test/images/0294-12_jpg.rf.ee4a0d1c3a61b00b3be7dcef7f026a9a.jpg: 640x640 1 Anchura radio celulas 96, 2 Anchura radio celulas 97s, 3 Parenquima en bandas 89s, 1 Porosidad 3, 2 Thylos 56s, 5 Vaso V2s, 11.9ms\n",
             "image 6/6 /home/llama/Enrique/maderas/yolov9/Wood-annotation-9/test/images/0550-4_png.rf.8a2c3c300657bdfe4f3458671f3b521c.jpg: 640x640 5 Anchura radio celulas 99s, 2 Disposicion vasos 6s, 15 Disposicion vasos 8s, 1 Porosidad 3, 5 Thylos 56s, 1 Vaso V2, 12.0ms\n",
-            "Speed: 0.4ms pre-process, 12.0ms inference, 1.0ms NMS per image at shape (1, 3, 640, 640)\n",
-            "Results saved to \u001b[1myolov9/runs/predict-seg/exp17\u001b[0m\n",
+            "Speed: 0.5ms pre-process, 12.0ms inference, 1.0ms NMS per image at shape (1, 3, 640, 640)\n",
+            "Results saved to \u001b[1myolov9/runs/predict-seg/exp18\u001b[0m\n",
             "\n"
           ]
         }
@@ -51,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -81,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -102,7 +102,7 @@
               " 'output_processed.json')"
             ]
           },
-          "execution_count": 60,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -159,16 +159,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "'predictions.csv'"
+              "'predictions.json'"
             ]
           },
-          "execution_count": 65,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -176,6 +176,8 @@
       "source": [
         "import json\n",
         "import pandas as pd\n",
+        "from sklearn.metrics.pairwise import cosine_similarity\n",
+        "from sklearn.feature_extraction.text import CountVectorizer\n",
         "\n",
         "# Load JSON data\n",
         "with open('output_processed.json', 'r') as f:\n",
@@ -189,50 +191,35 @@
         "codigos = df['Codigos '].astype(str).tolist()  # Note the space at the end of 'Codigos '\n",
         "scientific_names = df['NOMBRE CIENTIFICO'].tolist()\n",
         "\n",
-        "# Function to get top 5 matches by number of matching elements\n",
-        "def get_top_matches_by_coincidence(input_code, codigos, scientific_names):\n",
-        "    input_set = set(input_code.split(','))\n",
-        "    match_counts = []\n",
+        "# Function to get top 5 matches\n",
+        "def get_top_matches(input_code, codigos, scientific_names):\n",
+        "    vectorizer = CountVectorizer().fit_transform([input_code] + codigos)\n",
+        "    vectors = vectorizer.toarray()\n",
+        "    cosine_matrix = cosine_similarity(vectors)\n",
+        "    scores = cosine_matrix[0][1:]  # Skip the first element (self comparison)\n",
         "    \n",
-        "    for idx, code in enumerate(codigos):\n",
-        "        code_set = set(code.split(','))\n",
-        "        common_elements = input_set.intersection(code_set)\n",
-        "        match_counts.append((len(common_elements), scientific_names[idx], code))\n",
-        "    \n",
-        "    # Sort by number of matches in descending order and get top 5\n",
-        "    top_matches = sorted(match_counts, key=lambda x: x[0], reverse=True)[:5]\n",
-        "    return [(match[1], match[2], match[0]) for match in top_matches]\n",
+        "    top_indices = scores.argsort()[-5:][::-1]  # Get indices of top 5 scores in descending order\n",
+        "    top_scores = scores[top_indices]\n",
+        "    top_matches = [(scientific_names[i], codigos[i], top_scores[idx]) for idx, i in enumerate(top_indices)]\n",
+        "    return top_matches\n",
         "\n",
         "# Compare and predict top 5 candidates for each name in JSON\n",
         "predictions = []\n",
         "for item in json_data:\n",
         "    name = item['name']\n",
         "    code = item['code']\n",
-        "    top_matches = get_top_matches_by_coincidence(code, codigos, scientific_names)\n",
+        "    top_matches = get_top_matches(code, codigos, scientific_names)\n",
         "    predictions.append({\n",
         "        \"name\": name,\n",
         "        \"predictions\": top_matches\n",
         "    })\n",
         "\n",
-        "# Save the predictions to a new JSON file\n",
-        "output_predictions_path = 'coincidence_predictions.json'\n",
+        "# Save the predictions to a JSON file\n",
+        "output_predictions_path = 'predictions.json'\n",
         "with open(output_predictions_path, 'w') as f:\n",
         "    json.dump(predictions, f, indent=4)\n",
         "\n",
-        "output_predictions_path\n",
-        "\n",
-        "# Convert predictions to CSV format\n",
-        "csv_data = []\n",
-        "for pred in predictions:\n",
-        "    for match in pred['predictions']:\n",
-        "        csv_data.append([pred['name'], match[0], match[1], match[2]])\n",
-        "\n",
-        "# Create a DataFrame and save to CSV\n",
-        "csv_df = pd.DataFrame(csv_data, columns=['Name', 'Predicted Scientific Name', 'Codigo', 'Match Count'])\n",
-        "csv_output_path = 'predictions.csv'\n",
-        "csv_df.to_csv(csv_output_path, index=False)\n",
-        "\n",
-        "csv_output_path"
+        "output_predictions_path"
       ]
     }
   ],
